tests/snapshots/formats__pdf__encrypted-empty-aes-256-r5.pdf.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ encrypted-empty-aes-256-r5.pdf — PDF 1.3, 1 page, encrypted (AES-256, R5), title "Secret title", producer "pypdf"  [0x0+0x602]
    Header: "1.3"  [0x0+0x8]
    Binary marker: e2 e3 cf d3  |....|  [0x9+0x5]
  ▾ Trailer — 5 entries  [0x522+0xca]
      /Size: 7  [0x52d+0x7]
      /Root: "3 0 R"  [0x535+0xb] → 0x141+0x0
      /Info: "1 0 R"  [0x541+0xb] → 0xf+0x0
    ▾ /ID — [(c04008fb3b416e41127aa54a) (c04008fb3b416e41127aa54a)]  [0x54d+0x8d]
        [0]: "c04008fb3b416e41127aa54ac330279c" — hex string  [0x553+0x42]
        [1]: "c04008fb3b416e41127aa54ac330279c" — hex string  [0x596+0x42]
      /Encrypt: "6 0 R"  [0x5db+0xe] → 0x262+0x0
  ▾ Document Catalog: "3 0 R" — /Catalog, 2 entries  [0x53b+0x5] → 0x141+0x0
      /Type: "/Catalog"  [0x14c+0xe]
    ▾ /Pages: "2 0 R" — /Pages, 3 entries  [0x15b+0xc] → 0x106+0x0
        /Type: "/Pages"  [0x111+0xc]
        /Count: 1  [0x11e+0x8]
      ▾ /Kids — [4 0 R]  [0x127+0xf]
        ▾ [0]: "4 0 R" — /Page, 5 entries  [0x12f+0x5] → 0x172+0x0
            /Type: "/Page"  [0x17d+0xb]
          ▾ /Resources — 0 entries  [0x189+0x10]
          ▾ /MediaBox — [0 0 200 100]  [0x19a+0x1d]
              [0]: 0  [0x1a6+0x3]
              [1]: 0  [0x1aa+0x3]
              [2]: 200  [0x1ae+0x3]
              [3]: 100  [0x1b2+0x3]
            /Parent: "2 0 R"  [0x1b8+0xd] → 0x106+0x0
          ▾ /Contents: "5 0 R" — stream, 1 entries, 80 bytes  [0x1c6+0xf] → 0x1e0+0x0
              /Length: 80  [0x1eb+0xa]
            ▾ Stream data — UTF-8 text, 1 line  [0x200+0x50]
                Encoding: "UTF-8"
                Line endings: "none" — 0 LF, 0 CRLF, 0 CR
              ▾ Lines — 1 line  [#1:0x0+0x33]
                  Line 1: "BT /F1 12 Tf 20 50 Td (Hello encrypted world) Tj ET"  [#1:0x0+0x33]
            ▾ Operators
                BT — begin text  [#1:0x0+0x2]
                Tf: "/F1 12" — set font  [#1:0x3+0x9]
                Td: "20 50" — move text position  [#1:0xd+0x8]
                Tj: "(Hello encrypted world)" — show text  [#1:0x16+0x1a]
                ET — end text  [#1:0x31+0x2]
  ▾ Document Information: "1 0 R" — 3 entries  [0x547+0x5] → 0xf+0x0
      /Producer: "pypdf" — hex string  [0x1a+0x4c]
      /Title: "Secret title" — hex string  [0x67+0x49]
      /Author: "fillyfoal" — hex string  [0xb1+0x4a]
  ▾ Encryption — AES-256, R5
      Object header: "6 0 obj"  [0x262+0x8]
      /V: crypt filters (AES-256) (0x5)  [0x26d+0x4]
      /R: AES-256 (Adobe extension level 3, deprecated) (0x5)  [0x272+0x4]
      /Length: 256 — 256-bit key  [0x277+0xb]
      /P: 0xfffffffc [print | modify | copy | annotate | fill forms | extract for accessibility | assemble | print high quality | (reserved bits)] — everything allowed  [0x283+0xd]
      /Filter: "/Standard"  [0x291+0x11]
      /O: 36 02 88 a6 00 e7 18 89 ae d9 e6 a7 b9 8b 79 4f …  |6.............yO| — 48 bytes  [0x2a3+0x65]
      /U: 17 a3 47 6b 5f 9b 2d d3 3e 5c 01 8b 84 1e 54 42 …  |..Gk_.-.>\....TB| — 48 bytes  [0x309+0x65]
    ▾ /CF — 1 entries  [0x36f+0x41]
      ▾ /StdCF — 3 entries  [0x376+0x37]
          /AuthEvent: "/DocOpen"  [0x380+0x13]
          /CFM: "/AESV3"  [0x394+0xb]
          /Length: 32  [0x3a0+0xa]
      /StmF: "/StdCF"  [0x3b1+0xc]
      /StrF: "/StdCF"  [0x3be+0xc]
      /OE: a2 4a e6 3a 4d 3b bf 69 3c c8 d8 71 c1 ea d5 63 …  |.J.:M;.i<..q...c| — 32 bytes  [0x3cb+0x46]
      /UE: a7 ff 8b 9e b4 db a3 d1 ea 73 6b 68 0a 4f 53 75 …  |.........skh.OSu| — 32 bytes  [0x412+0x46]
      /Perms: 03 cf 09 b4 0e ea 16 e9 3c 4d 09 c6 f6 bf 15 e5  |........<M......| — matches /P  [0x459+0x29]
      Status: "unlocked: the empty user password (or the one entered) opens it" — AES-256, R5
  ▾ Pages — 1 page
    ▾ Page 1 — /Page, 5 entries  [0x172+0x6d]
        /Type: "/Page"  [0x17d+0xb]
      ▾ /Resources — 0 entries  [0x189+0x10]
      ▾ /MediaBox — [0 0 200 100]  [0x19a+0x1d]
          [0]: 0  [0x1a6+0x3]
          [1]: 0  [0x1aa+0x3]
          [2]: 200  [0x1ae+0x3]
          [3]: 100  [0x1b2+0x3]
        /Parent: "2 0 R"  [0x1b8+0xd] → 0x106+0x0
      ▾ /Contents: "5 0 R" — stream, 1 entries, 80 bytes  [0x1c6+0xf] → 0x1e0+0x0
          /Length: 80  [0x1eb+0xa]
        ▾ Stream data — UTF-8 text, 1 line  [0x200+0x50]
            Encoding: "UTF-8"
            Line endings: "none" — 0 LF, 0 CRLF, 0 CR
          ▾ Lines — 1 line  [#1:0x0+0x33]
              Line 1: "BT /F1 12 Tf 20 50 Td (Hello encrypted world) Tj ET"  [#1:0x0+0x33]
        ▾ Operators
            BT — begin text  [#1:0x0+0x2]
            Tf: "/F1 12" — set font  [#1:0x3+0x9]
            Td: "20 50" — move text position  [#1:0xd+0x8]
            Tj: "(Hello encrypted world)" — show text  [#1:0x16+0x1a]
            ET — end text  [#1:0x31+0x2]
  ▾ Objects — 7 entries
      Object 0: 0 — free, next free object 0, generation 65535
      Object 1 0: 0xf — 3 entries (in use, generation 0) → 0xf+0xf6
      Object 2 0: 0x106 — /Pages, 3 entries (in use, generation 0) → 0x106+0x3a
      Object 3 0: 0x141 — /Catalog, 2 entries (in use, generation 0) → 0x141+0x30
      Object 4 0: 0x172 — /Page, 5 entries (in use, generation 0) → 0x172+0x6d
      Object 5 0: 0x1e0 — stream, 1 entries, 80 bytes (in use, generation 0) → 0x1e0+0x81
      Object 6 0: 0x262 — 13 entries (in use, generation 0) → 0x262+0x22a
  ▾ Revisions — 1 cross-reference section
    ▾ Revision 1 — original: 6 objects, cross-reference table at 0x48d with 7 entries  [0x0+0x602]
      ▾ Body — 6 objects  [0x0+0x48d]
        ▾ Object 1 0 — 3 entries  [0xf+0xf6]
            Object header: "1 0 obj"  [0xf+0x8]
            /Producer: "pypdf" — hex string  [0x1a+0x4c]
            /Title: "Secret title" — hex string  [0x67+0x49]
            /Author: "fillyfoal" — hex string  [0xb1+0x4a]
            End keywords: "endobj"  [0xfe+0x7]
        ▾ Object 2 0 — /Pages, 3 entries  [0x106+0x3a]
            Object header: "2 0 obj"  [0x106+0x8]
            /Type: "/Pages"  [0x111+0xc]
            /Count: 1  [0x11e+0x8]
          ▾ /Kids — [4 0 R]  [0x127+0xf]
              [0]: "4 0 R"  [0x12f+0x5] → 0x172+0x0
            End keywords: "endobj"  [0x139+0x7]
        ▾ Object 3 0 — /Catalog, 2 entries  [0x141+0x30]
            Object header: "3 0 obj"  [0x141+0x8]
            /Type: "/Catalog"  [0x14c+0xe]
            /Pages: "2 0 R"  [0x15b+0xc] → 0x106+0x0
            End keywords: "endobj"  [0x16a+0x7]
        ▾ Object 4 0 — /Page, 5 entries  [0x172+0x6d]
            Object header: "4 0 obj"  [0x172+0x8]
            /Type: "/Page"  [0x17d+0xb]
          ▾ /Resources — 0 entries  [0x189+0x10]
          ▾ /MediaBox — [0 0 200 100]  [0x19a+0x1d]
              [0]: 0  [0x1a6+0x3]
              [1]: 0  [0x1aa+0x3]
              [2]: 200  [0x1ae+0x3]
              [3]: 100  [0x1b2+0x3]
            /Parent: "2 0 R"  [0x1b8+0xd] → 0x106+0x0
            /Contents: "5 0 R"  [0x1c6+0xf] → 0x1e0+0x0
            End keywords: "endobj"  [0x1d8+0x7]
        ▾ Object 5 0 — stream, 1 entries, 80 bytes  [0x1e0+0x81]
            Object header: "5 0 obj"  [0x1e0+0x8]
            /Length: 80  [0x1eb+0xa]
            Stream keyword: "stream"  [0x1f8+0x8]
          ▾ Stream data — UTF-8 text, 1 line  [0x200+0x50]
              Encoding: "UTF-8"
              Line endings: "none" — 0 LF, 0 CRLF, 0 CR
            ▾ Lines — 1 line  [#1:0x0+0x33]
                Line 1: "BT /F1 12 Tf 20 50 Td (Hello encrypted world) Tj ET"  [#1:0x0+0x33]
          ▾ Operators
              BT — begin text  [#1:0x0+0x2]
              Tf: "/F1 12" — set font  [#1:0x3+0x9]
              Td: "20 50" — move text position  [#1:0xd+0x8]
              Tj: "(Hello encrypted world)" — show text  [#1:0x16+0x1a]
              ET — end text  [#1:0x31+0x2]
            End keywords: "endstream endobj"  [0x250+0x11]
        ▾ Object 6 0 — 13 entries  [0x262+0x22a]
            Object header: "6 0 obj"  [0x262+0x8]
            /V: 5  [0x26d+0x4]
            /R: 5  [0x272+0x4]
            /Length: 256  [0x277+0xb]
            /P: 4294967292  [0x283+0xd]
            /Filter: "/Standard"  [0x291+0x11]
            /O: 36 02 88 a6 00 e7 18 89 ae d9 e6 a7 b9 8b 79 4f …  |6.............yO| — 48 bytes  [0x2a3+0x65]
            /U: 17 a3 47 6b 5f 9b 2d d3 3e 5c 01 8b 84 1e 54 42 …  |..Gk_.-.>\....TB| — 48 bytes  [0x309+0x65]
          ▾ /CF — 1 entries  [0x36f+0x41]
            ▾ /StdCF — 3 entries  [0x376+0x37]
                /AuthEvent: "/DocOpen"  [0x380+0x13]
                /CFM: "/AESV3"  [0x394+0xb]
                /Length: 32  [0x3a0+0xa]
            /StmF: "/StdCF"  [0x3b1+0xc]
            /StrF: "/StdCF"  [0x3be+0xc]
            /OE: a2 4a e6 3a 4d 3b bf 69 3c c8 d8 71 c1 ea d5 63 …  |.J.:M;.i<..q...c| — 32 bytes  [0x3cb+0x46]
            /UE: a7 ff 8b 9e b4 db a3 d1 ea 73 6b 68 0a 4f 53 75 …  |.........skh.OSu| — 32 bytes  [0x412+0x46]
            /Perms: 03 cf 09 b4 0e ea 16 e9 3c 4d 09 c6 f6 bf 15 e5  |........<M......| — 16 bytes  [0x459+0x29]
            End keywords: "endobj"  [0x485+0x7]
      ▾ Cross-reference table — 7 entries in 1 subsection  [0x48d+0x95]
          Keyword: "xref"  [0x48d+0x4]
        ▾ Objects 0–6 — 7 entries  [0x492+0x90]
            Header: "0 7"  [0x492+0x3]
            Object 0: 0 — free, next free object 0, generation 65535  [0x496+0x14]
            Object 1: 0xf — in use, generation 0  [0x4aa+0x14] → 0xf+0x0
            Object 2: 0x106 — in use, generation 0  [0x4be+0x14] → 0x106+0x0
            Object 3: 0x141 — in use, generation 0  [0x4d2+0x14] → 0x141+0x0
            Object 4: 0x172 — in use, generation 0  [0x4e6+0x14] → 0x172+0x0
            Object 5: 0x1e0 — in use, generation 0  [0x4fa+0x14] → 0x1e0+0x0
            Object 6: 0x262 — in use, generation 0  [0x50e+0x14] → 0x262+0x0
      ▾ Trailer — 5 entries  [0x522+0xca]
          /Size: 7  [0x52d+0x7]
          /Root: "3 0 R"  [0x535+0xb] → 0x141+0x0
          /Info: "1 0 R"  [0x541+0xb] → 0xf+0x0
        ▾ /ID — [(c04008fb3b416e41127aa54a) (c04008fb3b416e41127aa54a)]  [0x54d+0x8d]
            [0]: "c04008fb3b416e41127aa54ac330279c" — hex string  [0x553+0x42]
            [1]: "c04008fb3b416e41127aa54ac330279c" — hex string  [0x596+0x42]
          /Encrypt: "6 0 R"  [0x5db+0xe] → 0x262+0x0
        startxref: 0x48d  [0x5ed+0xe] → 0x48d+0x4
        End-of-file marker: "%%EOF"  [0x5fc+0x5]
