tests/snapshots/formats__pdf__encrypted-empty-aes-256.pdf.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ encrypted-empty-aes-256.pdf — PDF 1.3, 1 page, title "Secret title", producer "pypdf", encrypted  [0x0+0x602]
    Header: "1.3"  [0x0+0x8]
  ▾ Trailer — 5 entries  [0x52a+0xc2]
      /Size: 7  [0x52d+0x7]
    ▾ /Root: "3 0 R" — /Catalog, 2 entries  [0x535+0xb] → 0x141+0x0
        /Type: "/Catalog"  [0x14c+0xe]
      ▾ /Pages: "2 0 R" — /Pages, 3 entries  [0x15b+0xc] → 0x106+0x0
          /Type: "/Pages"  [0x111+0xc]
          /Count: 1  [0x11e+0x8]
        ▾ /Kids — [4 0 R]  [0x127+0xf]
          ▾ [0]: "4 0 R" — /Page, 5 entries  [0x12f+0x5] → 0x172+0x0
              /Type: "/Page"  [0x17d+0xb]
            ▾ /Resources — 0 entries  [0x189+0x10]
            ▾ /MediaBox — [0 0 200 100]  [0x19a+0x1d]
                [0]: 0  [0x1a6+0x3]
                [1]: 0  [0x1aa+0x3]
                [2]: 200  [0x1ae+0x3]
                [3]: 100  [0x1b2+0x3]
              /Parent: "2 0 R" — already open above  [0x1b8+0xd] → 0x106+0x0
            ▾ /Contents: "5 0 R" — stream, 1 entries, 80 bytes  [0x1c6+0xf] → 0x1e0+0x0
                /Length: 80  [0x1eb+0xa]
              ▾ Stream data — UTF-8 text, 1 line  [0x200+0x50]
                  Encoding: "UTF-8"
                  Line endings: "none" — 0 LF, 0 CRLF, 0 CR
                ▾ Lines — 1 line  [#1:0x0+0x33]
                    Line 1: "BT /F1 12 Tf 20 50 Td (Hello encrypted world) Tj ET"  [#1:0x0+0x33]
              ▾ Content operators
                  BT — begin text  [#1:0x0+0x2]
                  Tf: "/F1 12" — set font  [#1:0x3+0x9]
                  Td: "20 50" — move text position  [#1:0xd+0x8]
                  Tj: "(Hello encrypted world)" — show text  [#1:0x16+0x1a]
                  ET — end text  [#1:0x31+0x2]
    ▾ /Info: "1 0 R" — 3 entries  [0x541+0xb] → 0xf+0x0
        /Producer: "pypdf" — hex string  [0x1a+0x4c]
        /Title: "Secret title" — hex string  [0x67+0x49]
        /Author: "fillyfoal" — hex string  [0xb1+0x4a]
    ▾ /ID — [(c04008fb3b416e41127aa54a) (c04008fb3b416e41127aa54a)]  [0x54d+0x8d]
        [0]: "c04008fb3b416e41127aa54ac330279c" — hex string  [0x553+0x42]
        [1]: "c04008fb3b416e41127aa54ac330279c" — hex string  [0x596+0x42]
    ▾ /Encrypt: "6 0 R" — 13 entries  [0x5db+0xe] → 0x262+0x0
        /V: 5  [0x26d+0x4]
        /R: 6  [0x272+0x4]
        /Length: 256  [0x277+0xb]
        /P: 4294967292  [0x283+0xd]
        /Filter: "/Standard"  [0x291+0x11]
        /O: "" — hex string  [0x2a3+0x65]
        /U: "" — hex string  [0x309+0x65]
      ▾ /CF — 1 entries  [0x36f+0x41]
        ▾ /StdCF — 3 entries  [0x376+0x37]
            /AuthEvent: "/DocOpen"  [0x380+0x13]
            /CFM: "/AESV3"  [0x394+0xb]
            /Length: 32  [0x3a0+0xa]
        /StmF: "/StdCF"  [0x3b1+0xc]
        /StrF: "/StdCF"  [0x3be+0xc]
        /OE: "" — hex string  [0x3cb+0x46]
        /UE: "" — hex string  [0x412+0x46]
        /Perms: "" — hex string  [0x459+0x29]
  ▾ Document Catalog: "3 0 R" — /Catalog, 2 entries  [0x53b+0x5] → 0x141+0x0
      /Type: "/Catalog"  [0x14c+0xe]
    ▾ /Pages: "2 0 R" — /Pages, 3 entries  [0x15b+0xc] → 0x106+0x0
        /Type: "/Pages"  [0x111+0xc]
        /Count: 1  [0x11e+0x8]
      ▾ /Kids — [4 0 R]  [0x127+0xf]
        ▾ [0]: "4 0 R" — /Page, 5 entries  [0x12f+0x5] → 0x172+0x0
            /Type: "/Page"  [0x17d+0xb]
          ▾ /Resources — 0 entries  [0x189+0x10]
          ▾ /MediaBox — [0 0 200 100]  [0x19a+0x1d]
              [0]: 0  [0x1a6+0x3]
              [1]: 0  [0x1aa+0x3]
              [2]: 200  [0x1ae+0x3]
              [3]: 100  [0x1b2+0x3]
            /Parent: "2 0 R" — already open above  [0x1b8+0xd] → 0x106+0x0
          ▾ /Contents: "5 0 R" — stream, 1 entries, 80 bytes  [0x1c6+0xf] → 0x1e0+0x0
              /Length: 80  [0x1eb+0xa]
            ▾ Stream data — UTF-8 text, 1 line  [0x200+0x50]
                Encoding: "UTF-8"
                Line endings: "none" — 0 LF, 0 CRLF, 0 CR
              ▾ Lines — 1 line  [#1:0x0+0x33]
                  Line 1: "BT /F1 12 Tf 20 50 Td (Hello encrypted world) Tj ET"  [#1:0x0+0x33]
            ▾ Content operators
                BT — begin text  [#1:0x0+0x2]
                Tf: "/F1 12" — set font  [#1:0x3+0x9]
                Td: "20 50" — move text position  [#1:0xd+0x8]
                Tj: "(Hello encrypted world)" — show text  [#1:0x16+0x1a]
                ET — end text  [#1:0x31+0x2]
  ▾ Document Information: "1 0 R" — 3 entries  [0x547+0x5] → 0xf+0x0
      /Producer: "pypdf" — hex string  [0x1a+0x4c]
      /Title: "Secret title" — hex string  [0x67+0x49]
      /Author: "fillyfoal" — hex string  [0xb1+0x4a]
  ▾ Pages
    ▾ Page 1 — /Page, 5 entries  [0x172+0x6d]
        /Type: "/Page"  [0x17d+0xb]
      ▾ /Resources — 0 entries  [0x189+0x10]
      ▾ /MediaBox — [0 0 200 100]  [0x19a+0x1d]
          [0]: 0  [0x1a6+0x3]
          [1]: 0  [0x1aa+0x3]
          [2]: 200  [0x1ae+0x3]
          [3]: 100  [0x1b2+0x3]
      ▾ /Parent: "2 0 R" — /Pages, 3 entries  [0x1b8+0xd] → 0x106+0x0
          /Type: "/Pages"  [0x111+0xc]
          /Count: 1  [0x11e+0x8]
        ▾ /Kids — [4 0 R]  [0x127+0xf]
            [0]: "4 0 R" — already open above  [0x12f+0x5] → 0x172+0x0
      ▾ /Contents: "5 0 R" — stream, 1 entries, 80 bytes  [0x1c6+0xf] → 0x1e0+0x0
          /Length: 80  [0x1eb+0xa]
        ▾ Stream data — UTF-8 text, 1 line  [0x200+0x50]
            Encoding: "UTF-8"
            Line endings: "none" — 0 LF, 0 CRLF, 0 CR
          ▾ Lines — 1 line  [#1:0x0+0x33]
              Line 1: "BT /F1 12 Tf 20 50 Td (Hello encrypted world) Tj ET"  [#1:0x0+0x33]
        ▾ Content operators
            BT — begin text  [#1:0x0+0x2]
            Tf: "/F1 12" — set font  [#1:0x3+0x9]
            Td: "20 50" — move text position  [#1:0xd+0x8]
            Tj: "(Hello encrypted world)" — show text  [#1:0x16+0x1a]
            ET — end text  [#1:0x31+0x2]
  ▾ Objects — 7 entries
      Object 0 — free
    ▾ Object 1 0 — 3 entries  [0xf+0xf6]
        /Producer: "pypdf" — hex string  [0x1a+0x4c]
        /Title: "Secret title" — hex string  [0x67+0x49]
        /Author: "fillyfoal" — hex string  [0xb1+0x4a]
    ▾ Object 2 0 — /Pages, 3 entries  [0x106+0x3a]
        /Type: "/Pages"  [0x111+0xc]
        /Count: 1  [0x11e+0x8]
      ▾ /Kids — [4 0 R]  [0x127+0xf]
        ▾ [0]: "4 0 R" — /Page, 5 entries  [0x12f+0x5] → 0x172+0x0
            /Type: "/Page"  [0x17d+0xb]
          ▾ /Resources — 0 entries  [0x189+0x10]
          ▾ /MediaBox — [0 0 200 100]  [0x19a+0x1d]
              [0]: 0  [0x1a6+0x3]
              [1]: 0  [0x1aa+0x3]
              [2]: 200  [0x1ae+0x3]
              [3]: 100  [0x1b2+0x3]
            /Parent: "2 0 R" — already open above  [0x1b8+0xd] → 0x106+0x0
          ▾ /Contents: "5 0 R" — stream, 1 entries, 80 bytes  [0x1c6+0xf] → 0x1e0+0x0
              /Length: 80  [0x1eb+0xa]
            ▾ Stream data — UTF-8 text, 1 line  [0x200+0x50]
                Encoding: "UTF-8"
                Line endings: "none" — 0 LF, 0 CRLF, 0 CR
              ▾ Lines — 1 line  [#1:0x0+0x33]
                  Line 1: "BT /F1 12 Tf 20 50 Td (Hello encrypted world) Tj ET"  [#1:0x0+0x33]
            ▾ Content operators
                BT — begin text  [#1:0x0+0x2]
                Tf: "/F1 12" — set font  [#1:0x3+0x9]
                Td: "20 50" — move text position  [#1:0xd+0x8]
                Tj: "(Hello encrypted world)" — show text  [#1:0x16+0x1a]
                ET — end text  [#1:0x31+0x2]
    ▾ Object 3 0 — /Catalog, 2 entries  [0x141+0x30]
        /Type: "/Catalog"  [0x14c+0xe]
      ▾ /Pages: "2 0 R" — /Pages, 3 entries  [0x15b+0xc] → 0x106+0x0
          /Type: "/Pages"  [0x111+0xc]
          /Count: 1  [0x11e+0x8]
        ▾ /Kids — [4 0 R]  [0x127+0xf]
          ▾ [0]: "4 0 R" — /Page, 5 entries  [0x12f+0x5] → 0x172+0x0
              /Type: "/Page"  [0x17d+0xb]
            ▾ /Resources — 0 entries  [0x189+0x10]
            ▾ /MediaBox — [0 0 200 100]  [0x19a+0x1d]
                [0]: 0  [0x1a6+0x3]
                [1]: 0  [0x1aa+0x3]
                [2]: 200  [0x1ae+0x3]
                [3]: 100  [0x1b2+0x3]
              /Parent: "2 0 R" — already open above  [0x1b8+0xd] → 0x106+0x0
            ▾ /Contents: "5 0 R" — stream, 1 entries, 80 bytes  [0x1c6+0xf] → 0x1e0+0x0
                /Length: 80  [0x1eb+0xa]
              ▾ Stream data — UTF-8 text, 1 line  [0x200+0x50]
                  Encoding: "UTF-8"
                  Line endings: "none" — 0 LF, 0 CRLF, 0 CR
                ▾ Lines — 1 line  [#1:0x0+0x33]
                    Line 1: "BT /F1 12 Tf 20 50 Td (Hello encrypted world) Tj ET"  [#1:0x0+0x33]
              ▾ Content operators
                  BT — begin text  [#1:0x0+0x2]
                  Tf: "/F1 12" — set font  [#1:0x3+0x9]
                  Td: "20 50" — move text position  [#1:0xd+0x8]
                  Tj: "(Hello encrypted world)" — show text  [#1:0x16+0x1a]
                  ET — end text  [#1:0x31+0x2]
    ▾ Object 4 0 — /Page, 5 entries  [0x172+0x6d]
        /Type: "/Page"  [0x17d+0xb]
      ▾ /Resources — 0 entries  [0x189+0x10]
      ▾ /MediaBox — [0 0 200 100]  [0x19a+0x1d]
          [0]: 0  [0x1a6+0x3]
          [1]: 0  [0x1aa+0x3]
          [2]: 200  [0x1ae+0x3]
          [3]: 100  [0x1b2+0x3]
      ▾ /Parent: "2 0 R" — /Pages, 3 entries  [0x1b8+0xd] → 0x106+0x0
          /Type: "/Pages"  [0x111+0xc]
          /Count: 1  [0x11e+0x8]
        ▾ /Kids — [4 0 R]  [0x127+0xf]
            [0]: "4 0 R" — already open above  [0x12f+0x5] → 0x172+0x0
      ▾ /Contents: "5 0 R" — stream, 1 entries, 80 bytes  [0x1c6+0xf] → 0x1e0+0x0
          /Length: 80  [0x1eb+0xa]
        ▾ Stream data — UTF-8 text, 1 line  [0x200+0x50]
            Encoding: "UTF-8"
            Line endings: "none" — 0 LF, 0 CRLF, 0 CR
          ▾ Lines — 1 line  [#1:0x0+0x33]
              Line 1: "BT /F1 12 Tf 20 50 Td (Hello encrypted world) Tj ET"  [#1:0x0+0x33]
        ▾ Content operators
            BT — begin text  [#1:0x0+0x2]
            Tf: "/F1 12" — set font  [#1:0x3+0x9]
            Td: "20 50" — move text position  [#1:0xd+0x8]
            Tj: "(Hello encrypted world)" — show text  [#1:0x16+0x1a]
            ET — end text  [#1:0x31+0x2]
    ▾ Object 5 0 — stream, 1 entries, 80 bytes  [0x1e0+0x81]
        /Length: 80  [0x1eb+0xa]
      ▾ Stream data — UTF-8 text, 1 line  [0x200+0x50]
          Encoding: "UTF-8"
          Line endings: "none" — 0 LF, 0 CRLF, 0 CR
        ▾ Lines — 1 line  [#1:0x0+0x33]
            Line 1: "BT /F1 12 Tf 20 50 Td (Hello encrypted world) Tj ET"  [#1:0x0+0x33]
      ▾ Content operators
          BT — begin text  [#1:0x0+0x2]
          Tf: "/F1 12" — set font  [#1:0x3+0x9]
          Td: "20 50" — move text position  [#1:0xd+0x8]
          Tj: "(Hello encrypted world)" — show text  [#1:0x16+0x1a]
          ET — end text  [#1:0x31+0x2]
    ▾ Object 6 0 — 13 entries  [0x262+0x22a]
        /V: 5  [0x26d+0x4]
        /R: 6  [0x272+0x4]
        /Length: 256  [0x277+0xb]
        /P: 4294967292  [0x283+0xd]
        /Filter: "/Standard"  [0x291+0x11]
        /O: "" — hex string  [0x2a3+0x65]
        /U: "" — hex string  [0x309+0x65]
      ▾ /CF — 1 entries  [0x36f+0x41]
        ▾ /StdCF — 3 entries  [0x376+0x37]
            /AuthEvent: "/DocOpen"  [0x380+0x13]
            /CFM: "/AESV3"  [0x394+0xb]
            /Length: 32  [0x3a0+0xa]
        /StmF: "/StdCF"  [0x3b1+0xc]
        /StrF: "/StdCF"  [0x3be+0xc]
        /OE: "" — hex string  [0x3cb+0x46]
        /UE: "" — hex string  [0x412+0x46]
        /Perms: "" — hex string  [0x459+0x29]
  ▾ Revisions — 1 cross-reference section
    ▾ Revision 1 — original: cross-reference table at 0x48d, 7 entries  [0x48d+0x93]
      ▾ Entries — 7 objects  [0x48d+0x93]
          Object 0 — free
          Object 1: 0xf — in use, generation 0 → 0xf+0x0
          Object 2: 0x106 — in use, generation 0 → 0x106+0x0
          Object 3: 0x141 — in use, generation 0 → 0x141+0x0
          Object 4: 0x172 — in use, generation 0 → 0x172+0x0
          Object 5: 0x1e0 — in use, generation 0 → 0x1e0+0x0
          Object 6: 0x262 — in use, generation 0 → 0x262+0x0
      ▾ Trailer — 5 entries  [0x52a+0xc2]
          /Size: 7  [0x52d+0x7]
        ▾ /Root: "3 0 R" — /Catalog, 2 entries  [0x535+0xb] → 0x141+0x0
            /Type: "/Catalog"  [0x14c+0xe]
          ▾ /Pages: "2 0 R" — /Pages, 3 entries  [0x15b+0xc] → 0x106+0x0
              /Type: "/Pages"  [0x111+0xc]
              /Count: 1  [0x11e+0x8]
            ▾ /Kids — [4 0 R]  [0x127+0xf]
              ▾ [0]: "4 0 R" — /Page, 5 entries  [0x12f+0x5] → 0x172+0x0
                  /Type: "/Page"  [0x17d+0xb]
                ▾ /Resources — 0 entries  [0x189+0x10]
                ▾ /MediaBox — [0 0 200 100]  [0x19a+0x1d]
                    [0]: 0  [0x1a6+0x3]
                    [1]: 0  [0x1aa+0x3]
                    [2]: 200  [0x1ae+0x3]
                    [3]: 100  [0x1b2+0x3]
                  /Parent: "2 0 R" — already open above  [0x1b8+0xd] → 0x106+0x0
                ▾ /Contents: "5 0 R" — stream, 1 entries, 80 bytes  [0x1c6+0xf] → 0x1e0+0x0
                    /Length: 80  [0x1eb+0xa]
                  ▾ Stream data — UTF-8 text, 1 line  [0x200+0x50]
                      Encoding: "UTF-8"
                      Line endings: "none" — 0 LF, 0 CRLF, 0 CR
                    ▾ Lines — 1 line  [#1:0x0+0x33]
                        Line 1: "BT /F1 12 Tf 20 50 Td (Hello encrypted world) Tj ET"  [#1:0x0+0x33]
                  ▾ Content operators
                      BT — begin text  [#1:0x0+0x2]
                      Tf: "/F1 12" — set font  [#1:0x3+0x9]
                      Td: "20 50" — move text position  [#1:0xd+0x8]
                      Tj: "(Hello encrypted world)" — show text  [#1:0x16+0x1a]
                      ET — end text  [#1:0x31+0x2]
        ▾ /Info: "1 0 R" — 3 entries  [0x541+0xb] → 0xf+0x0
            /Producer: "pypdf" — hex string  [0x1a+0x4c]
            /Title: "Secret title" — hex string  [0x67+0x49]
            /Author: "fillyfoal" — hex string  [0xb1+0x4a]
        ▾ /ID — [(c04008fb3b416e41127aa54a) (c04008fb3b416e41127aa54a)]  [0x54d+0x8d]
            [0]: "c04008fb3b416e41127aa54ac330279c" — hex string  [0x553+0x42]
            [1]: "c04008fb3b416e41127aa54ac330279c" — hex string  [0x596+0x42]
        ▾ /Encrypt: "6 0 R" — 13 entries  [0x5db+0xe] → 0x262+0x0
            /V: 5  [0x26d+0x4]
            /R: 6  [0x272+0x4]
            /Length: 256  [0x277+0xb]
            /P: 4294967292  [0x283+0xd]
            /Filter: "/Standard"  [0x291+0x11]
            /O: "" — hex string  [0x2a3+0x65]
            /U: "" — hex string  [0x309+0x65]
          ▾ /CF — 1 entries  [0x36f+0x41]
            ▾ /StdCF — 3 entries  [0x376+0x37]
                /AuthEvent: "/DocOpen"  [0x380+0x13]
                /CFM: "/AESV3"  [0x394+0xb]
                /Length: 32  [0x3a0+0xa]
            /StmF: "/StdCF"  [0x3b1+0xc]
            /StrF: "/StdCF"  [0x3be+0xc]
            /OE: "" — hex string  [0x3cb+0x46]
            /UE: "" — hex string  [0x412+0x46]
            /Perms: "" — hex string  [0x459+0x29]
    startxref: 0x48d  [0x5ed+0x15] → 0x48d+0x4
